--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.0.1",
     "core-js": "^3.8.3",
+    "element-plus": "^2.2.2",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
@@ -37,7 +39,9 @@
     "less": "^4.0.0",
     "less-loader": "^8.0.0",
     "prettier": "^2.4.1",
-    "typescript": "~4.5.5"
+    "typescript": "~4.5.5",
+    "unplugin-auto-import": "^0.8.6",
+    "unplugin-vue-components": "^0.19.6"
   },
   "config": {
     "commitizen": {
